# mg-playwright-actor-cluster

./: .env.example  .gitignore  AGENTS.md  DOCS.md  README.md  index.test.html  main.py  mise.toml  pyproject.toml  requirements.txt  setup.sh
browser/: __init__.py  context.py  fingerprint.py  stealth.js
configs/: proxies.json
configs/actors/: browserleaks_check.json  fingerprintjs_check.json  test_user_1.json  test_user_2.json  wildberries_user_deterministic.json
configs/behavior/: browserleaks_check.yaml  fingerprintjs_check.yaml  test_service.yaml  wildberries.yaml  wildberries_loggedin.yaml
db/: logger.py  sqlite.py
engine/: __init__.py  actions.py  ban.py  executor.py  human.py  llm_fallback.py  yaml_reader.py
orc/: runner.py  server.py  task_queue.py
scripts/: extract_analytics.py  fingerprint_check.py  health.py  wb-analytics.py
swarm/: actor.py  manager.py  profile.py  proxy.py  state.py
tests/browser/: test_context.py
tests/engine/: test_actions.py  test_ban.py  test_executor.py  test_yaml_reader.py
tests/orc/: test_server.py
tests/swarm/: test_manager.py  test_proxy.py  test_state.py
